--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 .main {
   font-family: Georgia, Verdana;
-  color: red;
+  color: whitesmoke;
   background-color: blue;
   background-image: url("./macross-wallpapers.jpg");
   background-size: cover;
