--- a/index.css
+++ b/index.css
@@ -1,8 +1,3 @@
-.main {
-  font-family: Georgia, Verdana;
-  color: whitesmoke;
-  background-color: blue;
-}
 .background {
   background-image: url("./macross-wallpapers.jpg");
   background-size: cover;
@@ -11,5 +6,16 @@
  background-color: aquamarine;
 }
 .main h1{
-  text-align: center
+  text-align: center;
+  font-weight: bold;
+  color: rgb (120, 25, 12);
+  font-family: 'Monoton', cursive, 'Russo One', sans-serif; 
+}
+.main h3{
+  color: rgb (120, 25, 12);
+  font-family: 'Permanent Marker', cursive, 'Russo One', sans-serif; 
+}
+.main p{
+  color: whitesmoke;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
