--- a/index.css
+++ b/index.css
@@ -7,11 +7,11 @@
 }
 .main h1{
   text-align: center;
-  color: #4E510F;
+  color: #ABB22E;
   font-family: 'Monoton', cursive, 'Russo One', sans-serif; 
 }
 .main h2{
-  color: #4E510F;
+  color: #ABB22E;
   font-family: 'Permanent Marker', cursive, 'Russo One', sans-serif; 
 }
 .main p{
