--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 .background {
   background-image: url("./fondo4EM.jpg");
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: 100% 100%;
 }
 .navigation {
  background-color: aquamarine;
