--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 .background {
-  background-image: url("./fondo4EM.jpg");
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-image: url("./fondo2.jpg");
+  background-repeat: repeat;
+  background-size: contain;
 }
 .navigation {
  background-color: aquamarine;
