--- a/index.css
+++ b/index.css
@@ -13,9 +13,9 @@
 }
 .main h2{
   color: #ABB22E;
-  font-family: 'Permanent Marker', cursive, 'Russo One', sans-serif; 
+  font-family: 'Russo One', sans-serif, 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 .main p{
-  color: whitesmoke;
+  color: #3B3020;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
