--- a/index.css
+++ b/index.css
@@ -8,11 +8,11 @@
 }
 .main h1{
   text-align: center;
-  color: #ABB22E;
+  color: #C0C81C;
   font-family: 'Monoton', cursive, 'Russo One', sans-serif; 
 }
 .main h2{
-  color: #ABB22E;
+  color: #C0C81C;
   font-family: 'Russo One', sans-serif, 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 .main p{
