--- a/index.css
+++ b/index.css
@@ -3,19 +3,50 @@
   background-repeat: repeat;
   background-size: contain;
 }
-.navigation {
- background-color: aquamarine;
+
+header {
+  background-color: #466995;
+  border-bottom: 1px solid #466995;
+  position: fixed;
+  width: 100%;
+  z-index: 10;
 }
+
+.navigation {
+  background-color: rgba(127, 219, 255, 0.562);
+  font-style: oblique;
+  margin: 30px auto;
+  padding: 0 20px;
+  text-align: center;
+}
+
+.navigation li{
+  display: inline-block;
+  width: 80px;
+  text-transform: uppercase;
+  font-size: medium;
+}
+
+.main {
+  z-index: 2;
+}
+
 .main h1{
   text-align: center;
   color: #37391D;
   font-family: 'Monoton', cursive, 'Russo One', sans-serif; 
 }
+
 .main h2{
   color: #37391D;
   font-family: 'Russo One', sans-serif, 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
 .main p{
   color: #3B3020;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+footer {
+  height: 100px;
 }
